Add FunctionFeatureTest, test for functions globally